--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -71,7 +71,7 @@
 		var COMMAND_LIST = ["echo", "clear", "help", "google", 
 							"facebook", "youtube", "site", "about", 
 							"wikipedia", "cd", "ls", "pwd", 
-							"rss", "discord", "trello", "reddit", "drive", "4chan",   
+							"rss", "discord", "trello", "reddit", "drive", "4chan", "github",  
 						   ];
         
         var HELP_LIST = ["The console prints out the arguments to this function", 
