--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -40,8 +40,8 @@
 
         var username = "weznon";
         var host = "chrome";
-        var cd = "/jsh";
-        var promptString = "<p id = 'prompt' >" + username + "@" + host + "[" + cd + "]: </p>";
+        var cd = "~";
+        var promptString = "<p id = 'prompt' >" + username + "@" + host + " " + cd + " $ </p>";
         var inputString = "<pre id  = 'input' contentEditable = 'true'></pre>";
         var inputBlock = "<pre id = 'caret'>&#9608;</pre>";
         var postInput = "<div id = 'post'></div>"; 
