--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -79,7 +79,14 @@ span{
             <script src="js/index.js"></script>
 
 
-
+<!-- #231D18
+#3D352A
+#625641
+#907F5C
+#C3B37E
+#E5D7A6
+colors from turtle image
+-->
 
 
 
