--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -32,7 +32,7 @@
             }
 
             #digital{
-                font-family:Courier New,Courier,monospace;
+                font-family:"Hack", monospace;
                 font-size:30px;
                 font-weight: bold;
                 color: #625641;
@@ -41,7 +41,7 @@
             }
 
             #actual{
-                font-family:Courier New,Courier,monospace;
+                font-family:"Hack", monospace;
                 font-size:30px;
                 font-weight: bold;
                 color: #231D18;
@@ -58,21 +58,122 @@
             body {
                 overflow:hidden;
             }
+            .link-container {
+        		border: 1px solid;
+        		width: 100%;
+                border-color: #625641;
+        		height: 20px;
+        	}
+
+        	.link-container a {
+        		display: block;
+        		background: #E5D7A6;
+        		height: 100%;
+                color:#625641;
+        		text-align: center;
+                border-color: #625641;
+        	}
+
+        	.link-container a:hover {
+        		background: #625641;
+                color: #E5D7A6;
+                border-color: #E5D7A6;
+        	}
         </style>
 
         <script src="js/prefixfree.min.js"></script>
 
     </head>
+
+
+
+
     <body>
-        <br>
-		<div id="terminal" style="height: 500px; width: 500px;text-align:left;">
-		</div>
-        <br>
-        <div id="bincont" style="width: 500px"></div>
-        <div id="digital" style="width: 500px"></div>
-        <div id="actual" style="width: 500px"></div>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src="js/index.js"></script>
+        <section style="float: left;margin-top: 10px;margin-right: 0.520833%;margin-bottom: 10px;margin-left: 0.520833%;">
+            <div id="term">
+                <div id="terminal" style="height: 500px; width: 500px;text-align:left;"></div>
+                <script src="js/index.js"></script>
+            </div>
+            <br>
+            <div id="links" style=" width: 500px;text-align:left;float: left;">
+                <div style="float: left; width:240px;margin-right:5px;margin-left:4px;margin-bottom: 10px;margin-top:10px">
+
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.github.com">Github</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="http://www.codepen.io/">CodePen</a>
+                    </div>
+                    <br>
+
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://stackoverflow.com/">Stack Overflow</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.haskell.org/hoogle/">Hoogle</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.gmail.com">GMail</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://drive.google.com">Drive</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://d-e.myschoolapp.com/app/student#login">My-DE</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.wolframalpha.com/">Wolfram Alpha</a>
+                    </div>
+                </div>
+                <div style="float: left; width:240px;margin-right:4px;margin-left:5px;margin-bottom:10px;margin-top:10px;">
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.reddit.com">Reddit</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.4chan.org/tg/">tg</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.4chan.org/wg/">wg</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.4chan.org/g/">g</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="https://www.youtube.com">YouTube</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="http://live.monstercat.com/">MCat FM</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="http://www.soundcloud.com/">Soundcloud</a>
+                    </div>
+                    <br>
+                    <div class="link-container" style:"float: left;">
+                        <a href="http://www.xkcd.com/">XKCD</a>
+                    </div>
+                </div>
+        </section>
+        <section style="float: left;margin-top: 10px;margin-right: 0.520833%;margin-bottom: 10px;margin-left: 0.520833%;">
+            <div id ="binclock">
+                <div id="bincont" style="width: 400px"></div>
+                <div id="digital" style="width: 400px"></div>
+                <div id="actual" style="width: 400px"></div>
+                <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+            </div>
+        </section>
+
 
 
 <!-- #231D18
