worked on startpage, changed px to percents

--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0050)http://startpages.github.io/startpages/tjsh-Vyris/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+    <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>root://</title>
 
         <link rel="stylesheet" type="text/css" href="./root____files/reset.css">
@@ -89,14 +91,14 @@
 
 
     <body>
-        <section style="float: left;margin-top: 10px;margin-right: 0.520833%;margin-bottom: 10px;margin-left: 0.520833%;">
+        <section style="float: left;width: 25%;height: 100%;margin-top: 0.520833%;margin-right: 0.520833%;margin-bottom: 0.520833%;margin-left: 0.520833%;">
             <div id="term">
-                <div id="terminal" style="height: 500px; width: 500px;text-align:left;"></div>
+                <div id="terminal" style="height: 500px; width: 100%;text-align:left;"></div>
                 <script src="js/index.js"></script>
             </div>
             <br>
-            <div id="links" style=" width: 500px;text-align:left;float: left;">
-                <div style="float: left; width:240px;margin-right:5px;margin-left:4px;margin-bottom: 10px;margin-top:10px">
+            <div id="links" style=" width: 100%;text-align:left;float: left;">
+                <div style="float: left; width:46%;margin-right:2%;margin-left:2%;margin-bottom: 0.520833%;margin-top:0.520833%">
 
                     <div class="link-container" style:"float: left;">
                         <a href="https://www.github.com">Github</a>
@@ -130,7 +132,7 @@
                         <a href="https://www.wolframalpha.com/">Wolfram Alpha</a>
                     </div>
                 </div>
-                <div style="float: left; width:240px;margin-right:4px;margin-left:5px;margin-bottom:10px;margin-top:10px;">
+                <div style="float: left; width:46%;margin-right:2%;margin-left:2%;margin-bottom: 0.520833%;margin-top:0.520833%">
                     <div class="link-container" style:"float: left;">
                         <a href="https://www.reddit.com">Reddit</a>
                     </div>
@@ -164,7 +166,7 @@
                     </div>
                 </div>
         </section>
-        <section style="float: left;margin-top: 10px;margin-right: 0.520833%;margin-bottom: 10px;margin-left: 0.520833%;">
+        <section style="float: left;margin-top: 0.520833%;margin-right: 0.520833%;margin-bottom: 0.520833%;margin-left: 0.520833%;">
             <div id ="binclock">
                 <div id="bincont" style="width: 400px"></div>
                 <div id="digital" style="width: 400px"></div>
