worked on webpages, added bedit folder. Might make website for it, just for fun

--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -34,7 +34,7 @@
             }
 
             #digital{
-                font-family:"Hack", monospace;
+                font-family:"Hasklig", monospace;
                 font-size:30px;
                 font-weight: bold;
                 color: #625641;
@@ -43,7 +43,7 @@
             }
 
             #actual{
-                font-family:"Hack", monospace;
+                font-family:"Hasklig", monospace;
                 font-size:30px;
                 font-weight: bold;
                 color: #231D18;
