worked on bedit page. web develope ment is hrad

--- a/bedit/homepage.html
+++ b/bedit/homepage.html
@@ -7,5 +7,10 @@
 </head>
 
 <body>
-    <section style="float: left;width: 10%;height: 100%; background: #625641" </section>
+    <section id = "sidebar" style="float: left;width: 10%;height: 100%;" </section>
+        <div>
+            <div class="sidebut" style: "float: left;">
+                    <a href="https://www.github.com">Github</a>
+                </div>
+        </div>
         <html>
