--- a/startpage/root___.html
+++ b/startpage/root___.html
@@ -39,7 +39,7 @@
         }
 
         #digital {
-            font-family: "Hasklig", monospace;
+            font-family: "Fira Code", monospace;
             font-size: 30px;
             font-weight: bold;
             color: #625641;
@@ -48,7 +48,7 @@
         }
 
         #actual {
-            font-family: "Hasklig", monospace;
+            font-family: "Fira Code", monospace;
             font-size: 30px;
             font-weight: bold;
             color: #231D18;
